--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 body{
-    background-color: #fff;
+    background-color: rgb(248, 178, 219);
     margin:0;
     display:flex;
     flex-direction: column;
@@ -23,11 +23,15 @@ body{
     font-size: 18px;
     font-weight: 1000;
     scroll-behavior: smooth;
-    overflow: auto;
+    overflow: hidden;
+    background-image: repeating-linear-gradient(30deg,rgba(255,255,255,.1),rgba(255,255,255,.1) 30px,transparent 0, transparent 60px);
+    animation: twill 15s linear infinite;
 }
 
-body.dark-theme{
-    background-color: #fff;
+
+
+h1{
+    color:#000;
 }
 
 .addContainer{
@@ -43,6 +47,7 @@ body.dark-theme{
 .nes-input{
     margin-right:20px;
     outline:0;
+    background-color: #fff;
 }
 
 .warn{
@@ -65,7 +70,7 @@ body.dark-theme{
     width:700px;
     height:600px;
     overflow: auto;
-    
+    background-color: #fff;
 }
 
 .list{
@@ -137,3 +142,8 @@ body.dark-theme{
     opacity: 0;
 }
 
+@keyframes twill {
+	to {
+        background-position: calc(-1*2*100vh);
+	}
+}
