--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@
     box-sizing: border-box;
 }
 
+
 body{
-    background-color: rgb(248, 178, 219);
+    background-color: #fff;
     margin:0;
     display:flex;
     flex-direction: column;
@@ -24,10 +25,7 @@ body{
     font-weight: 1000;
     scroll-behavior: smooth;
     overflow: hidden;
-    background-image: repeating-linear-gradient(30deg,rgba(255,255,255,.1),rgba(255,255,255,.1) 30px,transparent 0, transparent 60px);
-    animation: twill 15s linear infinite;
 }
-
 
 
 h1{
@@ -127,23 +125,14 @@ h1{
 }
 
 .progress progress{
-    margin:0;
-    padding:0;
     position: relative;
     left:0px;
     top:25px;
     width:570px;
-    
 }
 
 .icons .nes-icon.coin{
     position: relative;
     left:30px;
     opacity: 0;
-}
-
-@keyframes twill {
-	to {
-        background-position: calc(-1*2*100vh);
-	}
 }
